# emws

./: .gitignore  .gitmodules  README.md  embeding_matching_code_reading_report.tex  emws.yml  segmentation_doc.tex
code/: config.txt  config_invert.txt  invert_seq.py  predict.py  predict_bidirect.py  predict_c.py  predict_l.py  script2.py  seg2.py
cpp/: CMakeLists.txt
cpp/benchmark/: CMakeLists.txt
cpp/some_test/: CMakeLists.txt
emws-cpp/: CMakeLists.txt
emws-cpp/benchmark/: CMakeLists.txt  armadillo_bench.cpp  armadillo_bench.h  base_bench.cpp  base_bench.h  eigen_bench.cpp  eigen_bench.h  matrix_benchmark.cpp  numpy_bench.py
emws-cpp/conf/: emws_config.json  ewws_config.json  score_output.txt
emws-cpp/model/: README.md
emws-cpp/some_test/: CMakeLists.txt  test_armadillo_example.cpp  test_armadillo_solve.cpp  test_cereal_u32.cpp  test_easylogging.cpp  test_eigen_dot.cc  test_libigl_hello.cpp  test_locale.cpp  test_rapidjson_pretty.cpp  test_sigaction.c  test_str_op.cpp  test_utf8_io.cpp
emws-cpp/src/: CMakeLists.txt  Vocab.h  base_seger.cpp  base_seger.h  emws-predict.cpp  emws-train.cpp  emws_seger.cpp  emws_seger.h  score_ret.cpp  score_ret.h  str_op.cpp  str_op.h  test_str_op.cpp  test_utf8_io.cpp  utf8_io.cpp  utf8_io.h
emws-cpp/test/: CMakeLists.txt  test_catch_func.cpp  test_emws_seger.cpp  test_score_ret.cpp  test_str_op.cpp  test_utf8_io.cpp
nn/: cws_config.py  eval_test.py  test_lstm.py
working_data/: pku.100.txt.invert  pku.dict.invert  pku.test.10.invert  pku_count.py  pku_test.invert  pku_test.raw.invert  pku_train.9000
